# esp32c3

./: Cargo.toml  README.md
i2s_rx/: Cargo.toml
i2s_rx/src/: main.rs
rgb_led/: Cargo.toml
rgb_led/src/: main.rs
stereo_mic/: Cargo.toml
stereo_mic/src/: bk_main.rs  main.rs
